fix: PinWrapper is fixed and takes all the space, z-index tweaked to be
underneath alerts

--- a/src/ducks/pin/styles.styl
+++ b/src/ducks/pin/styles.styl
@@ -28,9 +28,12 @@
     background var(--primaryColor)
     width 100vw
     height 100vh
-    z-index 10000
-    position absolute
+    z-index 100
+    position fixed
     display flex
     justify-content center
     flex-direction column
     top 0
+    bottom 0
+    left 0
+    right 0
